<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/btn_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:id="@+id/locationContainer1"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btn_location"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/latitude"
            android:text="@string/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/longitude"
            android:text="@string/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/latitude"
            app:layout_constraintRight_toRightOf="@+id/country"/>

        <TextView
            android:id="@+id/country"
            android:text="@string/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/space1"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="242dp"
        app:layout_constraintTop_toBottomOf="@+id/locationContainer1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/addressLL"
        app:layout_constraintTop_toBottomOf="@+id/space1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/address"
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressLL">

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_and_time" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/space2"
            tools:layout_editor_absoluteX="215dp"
            tools:layout_editor_absoluteY="242dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/gyroscope_title"
            android:text="@string/gyroscope_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space2"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gyroscope_data_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gyroscope_title"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/x_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_axis"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/y_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_axis"
                app:layout_constraintLeft_toRightOf="@+id/x_axis"
                app:layout_constraintRight_toLeftOf="@+id/z_axis"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/z_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_axis"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>