<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">
    <HorizontalScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignStart="@id/text_label"
                android:text="@string/activity_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignStart="@id/text_confidence"
                android:text="@string/confidence"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/text_confidence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/start_racking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignStart="@id/stop_racking"
                android:text="@string/start_tracking"
                android:textStyle="bold" />


            <Button
                android:id="@+id/stop_racking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_tracking"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/load_tracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/start_tracking"
                android:textStyle="bold" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id = "@+id/relativeLayout1"
                android:layout_width = "fill_parent"
                android:weightSum="10"
                android:layout_height = "wrap_content"
                android:background = "@color/black" >

                <TextView
                    android:layout_width = "0dp"
                    android:layout_height = "wrap_content"
                    android:layout_weight = "2"
                    android:gravity = "center"
                    android:padding = "5dp"
                    android:text = "Activity"
                    android:textColor = "#ffffff" />

                <TextView
                    android:layout_width = "0dp"
                    android:layout_height = "wrap_content"
                    android:layout_weight = "1"
                    android:gravity = "center"
                    android:padding = "5dp"
                    android:text = "Accuracy"
                    android:textColor = "#ffffff"/>

                <TextView
                    android:layout_width = "0dp"
                    android:layout_height = "wrap_content"
                    android:layout_weight = "2.5"
                    android:gravity = "center"
                    android:padding = "5dp"
                    android:text = "Latitude"
                    android:textColor = "#ffffff" />

                <TextView
                    android:layout_width = "0dp"
                    android:layout_height = "wrap_content"
                    android:layout_weight = "2.5"
                    android:gravity = "center"
                    android:padding = "5dp"
                    android:text = "Longitude"
                    android:textColor = "#ffffff" />

                <TextView
                    android:layout_width = "0dp"
                    android:layout_height = "wrap_content"
                    android:layout_weight = "2"
                    android:gravity = "center"
                    android:padding = "5dp"
                    android:text = "Timestamp"
                    android:textColor = "#ffffff" />
            </LinearLayout>

        </RelativeLayout>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:divider="@null" />


    </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>